--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <header>
+    <img src="myphoto.jpg" alt="Prasad Bhoite" class="profile-photo">
     <h1>Prasad Shamrao Bhoite</h1>
     <p>I'm passionate about Cloud and DevOps, building scalable systems on AWS…</p>
   </header>
