--- a/index.html
+++ b/index.html
@@ -3,37 +3,79 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Prasad Shamrao Bhoite | Portfolio</title>
+  <title>Prasad Shamrao Bhoite | Cloud & DevOps Engineer</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <img src="myphoto.jpg" alt="Prasad Bhoite" class="profile-photo">
-    <h1>Prasad Shamrao Bhoite</h1>
-    <p>I'm passionate about Cloud and DevOps, building scalable systems on AWS…</p>
+  <!-- Header / Hero Section -->
+  <header class="hero">
+    <div class="hero-content">
+      <img src="myphoto.jpg" alt="Prasad Bhoite" class="profile-photo">
+      <h1>Prasad Shamrao Bhoite</h1>
+      <h3>Cloud & DevOps Engineer</h3>
+      <p>
+        Passionate about building scalable, secure, and automated cloud solutions using AWS, Linux, Docker, and DevOps tools.
+        I love optimizing systems and continuously learning modern cloud technologies.
+      </p>
+      <a href="#contact" class="btn">Get in Touch</a>
+    </div>
   </header>
 
-  <section id="skills">
-    <h2>Skills</h2>
-    <p>AWS, Linux, DevOps, Python, MySQL, Docker, etc.</p>
+  <!-- Skills Section -->
+  <section id="skills" class="skills-section">
+    <h2>Technical Skills</h2>
+    <div class="skills-container">
+      <span>AWS</span>
+      <span>Linux</span>
+      <span>Docker</span>
+      <span>Kubernetes</span>
+      <span>Terraform</span>
+      <span>CI/CD</span>
+      <span>Python</span>
+      <span>MySQL</span>
+      <span>Networking</span>
+      <span>GitHub Actions</span>
+    </div>
   </section>
 
-  <section id="projects">
+  <!-- Projects Section -->
+  <section id="projects" class="projects-section">
     <h2>Projects</h2>
-    <ul>
-      <li><b>Bus Booking App</b> – Flask + MySQL web app for ticket booking.</li>
-    </ul>
+    <div class="project-grid">
+      <div class="project-card">
+        <h3>Bus Booking App</h3>
+        <p>A Flask + MySQL-based bus ticket booking web app where users can search, book, and download tickets.</p>
+        <a href="#" class="btn-small">View Project</a>
+      </div>
+
+      <div class="project-card">
+        <h3>E-commerce Backup Tool</h3>
+        <p>Automated backup and restore system using AWS S3, MySQL, and Python scripting.</p>
+        <a href="#" class="btn-small">View Project</a>
+      </div>
+
+      <div class="project-card">
+        <h3>DevOps Automation Scripts</h3>
+        <p>Collection of scripts for EC2 setup, SSH key automation, and deployment pipelines using GitHub Actions.</p>
+        <a href="#" class="btn-small">View Project</a>
+      </div>
+    </div>
   </section>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:prasadsb2002@gmail.com">prasadsb2002@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/prasad-bhoite-a38a64223" target="_blank">linkedin.com/in/prasad-bhoite-a38a64223</a></p>
-    <p>GitHub: <a href="https://github.com/Prasad-Bhoite19" target="_blank">github.com/Prasad-Bhoite19</a></p>
+  <!-- Contact Section -->
+  <section id="contact" class="contact-section">
+    <h2>Contact Me</h2>
+    <p>Let’s connect! I’m open to Cloud, DevOps, and Infrastructure roles.</p>
+    <div class="contact-details">
+      <p>📧 <a href="mailto:prasadsb2002@gmail.com">prasadsb2002@gmail.com</a></p>
+      <p>💼 <a href="https://linkedin.com/in/prasad-bhoite-a38a64223" target="_blank">linkedin.com/in/prasad-bhoite-a38a64223</a></p>
+      <p>💻 <a href="https://github.com/Prasad-Bhoite19" target="_blank">github.com/Prasad-Bhoite19</a></p>
+    </div>
   </section>
 
+  <!-- Footer -->
   <footer>
-    <p>© 2025 Prasad Shamrao Bhoite. All rights reserved.</p>
+    <p>© 2025 Prasad Shamrao Bhoite | Designed with ❤️ for Cloud & DevOps</p>
   </footer>
 </body>
 </html>
