--- a/index.html
+++ b/index.html
@@ -1,81 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Prasad Shamrao Bhoite | Cloud & DevOps Engineer</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Prasad Bhoite | Cloud & DevOps Engineer</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- Header / Hero Section -->
+  <!-- ===== Header Section ===== -->
   <header class="hero">
+    <div class="overlay"></div>
     <div class="hero-content">
       <img src="myphoto.jpg" alt="Prasad Bhoite" class="profile-photo">
-      <h1>Prasad Shamrao Bhoite</h1>
-      <h3>Cloud & DevOps Engineer</h3>
-      <p>
-        Passionate about building scalable, secure, and automated cloud solutions using AWS, Linux, Docker, and DevOps tools.
-        I love optimizing systems and continuously learning modern cloud technologies.
-      </p>
-      <a href="#contact" class="btn">Get in Touch</a>
+      <h1>Hello, I'm <span>Prasad Bhoite</span></h1>
+      <p class="tagline">Cloud & DevOps Engineer | AWS | Linux | Docker | Python</p>
+      <a href="#contact" class="btn">Hire Me</a>
     </div>
   </header>
 
-  <!-- Skills Section -->
-  <section id="skills" class="skills-section">
-    <h2>Technical Skills</h2>
-    <div class="skills-container">
-      <span>AWS</span>
-      <span>Linux</span>
-      <span>Docker</span>
-      <span>Kubernetes</span>
-      <span>Terraform</span>
-      <span>CI/CD</span>
-      <span>Python</span>
-      <span>MySQL</span>
-      <span>Networking</span>
-      <span>GitHub Actions</span>
+  <!-- ===== About Section ===== -->
+  <section id="about" class="section about">
+    <h2>About Me</h2>
+    <p>
+      I am a passionate Cloud & DevOps Engineer focused on creating scalable, automated, and reliable infrastructures.
+      I love working with AWS, Docker, and CI/CD tools to deliver optimized solutions. 
+      I am a quick learner, team player, and always eager to explore new technologies.
+    </p>
+  </section>
+
+  <!-- ===== Skills Section ===== -->
+  <section id="skills" class="section skills">
+    <h2>My Skills</h2>
+    <div class="skill">
+      <p>AWS</p><div class="skill-bar"><span style="width: 90%;"></span></div>
+    </div>
+    <div class="skill">
+      <p>Linux</p><div class="skill-bar"><span style="width: 85%;"></span></div>
+    </div>
+    <div class="skill">
+      <p>Docker</p><div class="skill-bar"><span style="width: 80%;"></span></div>
+    </div>
+    <div class="skill">
+      <p>DevOps & CI/CD</p><div class="skill-bar"><span style="width: 75%;"></span></div>
+    </div>
+    <div class="skill">
+      <p>Python</p><div class="skill-bar"><span style="width: 70%;"></span></div>
     </div>
   </section>
 
-  <!-- Projects Section -->
-  <section id="projects" class="projects-section">
+  <!-- ===== Projects Section ===== -->
+  <section id="projects" class="section projects">
     <h2>Projects</h2>
-    <div class="project-grid">
-      <div class="project-card">
+    <div class="project-container">
+      <div class="project">
         <h3>Bus Booking App</h3>
-        <p>A Flask + MySQL-based bus ticket booking web app where users can search, book, and download tickets.</p>
-        <a href="#" class="btn-small">View Project</a>
+        <p>Flask + MySQL web application for ticket booking and route management.</p>
       </div>
-
-      <div class="project-card">
-        <h3>E-commerce Backup Tool</h3>
-        <p>Automated backup and restore system using AWS S3, MySQL, and Python scripting.</p>
-        <a href="#" class="btn-small">View Project</a>
+      <div class="project">
+        <h3>Cloud Deployment Automation</h3>
+        <p>Created automated EC2 instance deployment using AWS CLI and shell scripting.</p>
       </div>
-
-      <div class="project-card">
-        <h3>DevOps Automation Scripts</h3>
-        <p>Collection of scripts for EC2 setup, SSH key automation, and deployment pipelines using GitHub Actions.</p>
-        <a href="#" class="btn-small">View Project</a>
+      <div class="project">
+        <h3>CI/CD Pipeline Setup</h3>
+        <p>Built Jenkins pipeline integrating GitHub, Docker, and AWS for continuous delivery.</p>
       </div>
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="contact-section">
+  <!-- ===== Resume Section ===== -->
+  <section id="resume" class="section resume">
+    <h2>Resume</h2>
+    <p>You can view or download my latest resume for detailed experience and education.</p>
+    <a href="resume.pdf" class="btn" target="_blank">Download Resume</a>
+  </section>
+
+  <!-- ===== Contact Section ===== -->
+  <section id="contact" class="section contact">
     <h2>Contact Me</h2>
-    <p>Let’s connect! I’m open to Cloud, DevOps, and Infrastructure roles.</p>
-    <div class="contact-details">
-      <p>📧 <a href="mailto:prasadsb2002@gmail.com">prasadsb2002@gmail.com</a></p>
-      <p>💼 <a href="https://linkedin.com/in/prasad-bhoite-a38a64223" target="_blank">linkedin.com/in/prasad-bhoite-a38a64223</a></p>
-      <p>💻 <a href="https://github.com/Prasad-Bhoite19" target="_blank">github.com/Prasad-Bhoite19</a></p>
+    <div class="contact-info">
+      <p><strong>Email:</strong> <a href="mailto:prasadsb2002@gmail.com">prasadsb2002@gmail.com</a></p>
+      <p><strong>Phone:</strong> 9359070217</p>
+      <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/prasad-bhoite-a38a64223" target="_blank">linkedin.com/in/prasad-bhoite-a38a64223</a></p>
+      <p><strong>GitHub:</strong> <a href="https://github.com/Prasad-Bhoite19" target="_blank">github.com/Prasad-Bhoite19</a></p>
     </div>
+
+    <form id="contact-form">
+      <input type="text" placeholder="Your Name" required>
+      <input type="email" placeholder="Your Email" required>
+      <textarea placeholder="Your Message" required></textarea>
+      <button type="submit" class="btn">Send Message</button>
+    </form>
   </section>
 
-  <!-- Footer -->
+  <!-- ===== Footer ===== -->
   <footer>
-    <p>© 2025 Prasad Shamrao Bhoite | Designed with ❤️ for Cloud & DevOps</p>
+    <p>© 2025 Prasad Bhoite. All rights reserved.</p>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
