--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <h2>Contact Me</h2>
     <div class="contact-info">
       <p><strong>Email:</strong> <a href="mailto:prasadsb2002@gmail.com">prasadsb2002@gmail.com</a></p>
-      <p><strong>Phone:</strong> 9359070217</p>
+      <p><strong>Phone:</strong> +91-9359070217</p>
       <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/prasad-bhoite-a38a64223" target="_blank">linkedin.com/in/prasad-bhoite-a38a64223</a></p>
       <p><strong>GitHub:</strong> <a href="https://github.com/Prasad-Bhoite19" target="_blank">github.com/Prasad-Bhoite19</a></p>
     </div>
@@ -92,6 +92,25 @@
       <button type="submit" class="btn">Send Message</button>
     </form>
   </section>
+
+  <section id="contact" class="contact-section">
+  <h2>Contact Me</h2>
+  <p>Have a question or want to work together? Send me a message below 👇</p>
+
+  <div class="form-wrapper">
+    <form id="contactForm" action="https://formspree.io/f/your-real-id" method="POST" class="contact-form">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="_replyto" placeholder="Your Email" required>
+      <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+
+    <!-- Success message placeholder -->
+    <p id="successMessage" class="note" style="display:none; color:#d4af37; margin-top:15px;">
+      ✅ Your message has been sent. I’ll get back to you soon!
+    </p>
+  </div>
+</section>
 
   <!-- ===== Footer ===== -->
   <footer>
