--- a/index.html
+++ b/index.html
@@ -75,23 +75,10 @@
     <a href="resume.pdf" class="btn" target="_blank">Download Resume</a>
   </section>
 
-  <!-- ===== Contact Section ===== -->
-  <section id="contact" class="section contact">
-    <h2>Contact Me</h2>
-    <div class="contact-info">
-      <p><strong>Email:</strong> <a href="mailto:prasadsb2002@gmail.com">prasadsb2002@gmail.com</a></p>
-      <p><strong>Phone:</strong> +91-9359070217</p>
-      <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/prasad-bhoite-a38a64223" target="_blank">linkedin.com/in/prasad-bhoite-a38a64223</a></p>
-      <p><strong>GitHub:</strong> <a href="https://github.com/Prasad-Bhoite19" target="_blank">github.com/Prasad-Bhoite19</a></p>
-    </div>
-
-    <form id="contact-form">
-      <input type="text" placeholder="Your Name" required>
-      <input type="email" placeholder="Your Email" required>
-      <textarea placeholder="Your Message" required></textarea>
-      <button type="submit" class="btn">Send Message</button>
-    </form>
-  </section>
+ <!-- ===== Contact Section ===== -->
+<section id="contact" class="contact-section">
+  <h2>Contact Me</h2>
+  <p>Have a question or want to work together? Send me a message below 👇</p>
 
   <div class="form-wrapper">
     <form id="contactForm" action="https://formspree.io/f/xanpblve" method="POST" class="contact-form">
