--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="hero">
     <div class="overlay"></div>
     <div class="hero-content">
-      <img src="myphoto.jpg" alt="Prasad Bhoite" class="profile-photo">
+      <img src="myphoto1.jpg" alt="Prasad Bhoite" class="profile-photo">
       <h1>Hello, I'm <span>Prasad Bhoite</span></h1>
       <p class="tagline">Cloud & DevOps Engineer | AWS | Linux | Docker | Python</p>
       <a href="#contact" class="btn">Hire Me</a>
