--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       I am a quick learner, team player, and always eager to explore new technologies.
     </p>
   </section>
+  
+  <!-- Font Awesome CDN -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
   <!-- ===== Skills Section ===== -->
   <section id="skills" class="section skills">
@@ -76,39 +79,38 @@
   </section>
 
  <!-- ===== Contact Section ===== -->
- <!-- PROFESSIONAL CONTACT ICONS SECTION -->
-<section id="contact-links" style="text-align:center; background-color:black; padding:50px; border-radius:15px; margin-top:30px;">
-  
-  <h2 style="color:gold; font-size:32px; margin-bottom:20px;">📞 Connect with Me</h2>
-  <p style="color:gold; font-size:18px; margin-bottom:35px;">Click an icon to reach me directly!</p>
-  
-  <div style="display:flex; justify-content:center; gap:30px; flex-wrap:wrap;">
+<!-- MODERN CONTACT ICONS SECTION -->
+<section id="contact-links" style="background-color:black; padding:60px 20px; text-align:center; border-radius:20px; margin-top:40px;">
 
-    <!-- Mobile -->
-    <a href="tel:+919359070217" title="Call Me" style="color:gold; font-size:36px; transition:0.3s;">
+  <h2 style="color:gold; font-size:32px; margin-bottom:25px;">✨ Connect with Me</h2>
+  <p style="color:gold; font-size:18px; margin-bottom:40px;">Tap an icon below to connect instantly!</p>
+
+  <div class="icons-container" style="display:flex; justify-content:center; gap:35px; flex-wrap:wrap;">
+    
+    <!-- Phone -->
+    <a href="tel:+919359070217" class="icon-btn" title="Call Me">
       <i class="fas fa-phone"></i>
     </a>
 
     <!-- Email -->
-    <a href="mailto:prasadsb2002@gmail.com" title="Email Me" style="color:gold; font-size:36px; transition:0.3s;">
+    <a href="mailto:prasadsb2002@gmail.com" class="icon-btn" title="Email Me">
       <i class="fas fa-envelope"></i>
     </a>
 
     <!-- LinkedIn -->
-    <a href="www.linkedin.com/in/prasad-bhoite-a38a64223" target="_blank" title="LinkedIn" style="color:gold; font-size:36px; transition:0.3s;">
+    <a href="www.linkedin.com/in/prasad-bhoite-a38a64223" target="_blank" class="icon-btn" title="LinkedIn">
       <i class="fab fa-linkedin"></i>
     </a>
 
     <!-- GitHub -->
-    <a href="https://github.com/Prasad-Bhoite19" target="_blank" title="GitHub" style="color:gold; font-size:36px; transition:0.3s;">
+    <a href="https://github.com/Prasad-Bhoite19" target="_blank" class="icon-btn" title="GitHub">
       <i class="fab fa-github"></i>
     </a>
 
     <!-- Portfolio -->
-    <a href="https://prasad-bhoite19.github.io/prasad-portfolio/" target="_blank" title="Portfolio" style="color:gold; font-size:36px; transition:0.3s;">
+    <a href="https://prasad-bhoite19.github.io/prasad-portfolio/" target="_blank" class="icon-btn" title="Portfolio">
       <i class="fas fa-globe"></i>
     </a>
-
   </div>
 </section>
 
