--- a/index.html
+++ b/index.html
@@ -97,10 +97,13 @@
       <i class="fas fa-envelope"></i>
     </a>
 
-    <!-- LinkedIn -->
-    <a href="www.linkedin.com/in/prasad-bhoite-a38a64223" target="_blank" class="icon-btn" title="LinkedIn">
-      <i class="fab fa-linkedin"></i>
+   <!-- LinkedIn -->
+    <a href="linkedin://in/prasad-bhoite"
+      onclick="window.location='www.linkedin.com/in/prasad-bhoite-a38a64223;"
+         class="icon-btn" title="LinkedIn">
+       <i class="fab fa-linkedin"></i>
     </a>
+
 
     <!-- GitHub -->
     <a href="https://github.com/Prasad-Bhoite19" target="_blank" class="icon-btn" title="GitHub">
