--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
   <!-- Font Awesome CDN -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
+  <!-- ===== Education Section ===== -->
+<section id="education" class="section education">
+  <h2>Education</h2>
+  <p>
+    <strong>Bachelor of Science (B.Sc) in Computer Science</strong><br>
+    Shivaji University, Kolhapur<br>
+    Passing Year: 2025<br>
+    CGPA: 7.5 / 10
+  </p>
+</section>
+
+<!-- Font Awesome CDN -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+  
   <!-- ===== Skills Section ===== -->
   <section id="skills" class="section skills">
     <h2>My Skills</h2>
