--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   <!-- Font Awesome CDN -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
-  <!-- ===== Education Section ===== -->
-<section id="education" class="section education">
+<!-- ===== Education Section ===== -->
+<section id="education" class="section education" style="text-align: center;">
   <h2>Education</h2>
   <p>
     <strong>Bachelor of Science (B.Sc) in Computer Science</strong><br>
@@ -45,7 +45,7 @@
 
 <!-- Font Awesome CDN -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
-  
+ 
   <!-- ===== Skills Section ===== -->
   <section id="skills" class="section skills">
     <h2>My Skills</h2>
