--- a/index.html
+++ b/index.html
@@ -18,8 +18,18 @@
       <a href="#contact" class="btn">Hire Me</a>
     </div>
   </header>
-
-  <!-- ===== About Section ===== -->
+<!-- ===== Right Side Vertical Navigation Bar ===== -->
+<nav class="side-nav">
+  <ul>
+    <li><a href="#about">About Me</a></li>
+    <li><a href="#education">Education</a></li>
+    <li><a href="#skills">My Skills</a></li>
+    <li><a href="#projects">Projects</a></li>
+    <li><a href="#resume">Resume</a></li>
+    <li><a href="#contact">Connect with Me</a></li>
+  </ul>
+</nav>
+   <!-- ===== About Section ===== -->
   <section id="about" class="section about">
     <h2>About Me</h2>
     <p>
